# VAMeter-Firmware

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  fetch_repos.py  get_submodules.sh  header_replace.sh  repos.json
app/: app.cpp  app.h
app/apps/: app_generator.py  apps.h
app/apps/app_base_test/: app_base_test.cpp  app_base_test.h
app/apps/app_files/: app_files.cpp  app_files.h
app/apps/app_files/view/: msc_mode.cpp  record_files.cpp  root.cpp  upload_success.cpp
app/apps/app_hal_test/: app_hal_test.cpp  app_hal_test.h
app/apps/app_launcher/: app_launcher.cpp  app_launcher.h
app/apps/app_launcher/view/: view.cpp  view.h
app/apps/app_power_monitor/: app_power_monitor.cpp  app_power_monitor.h
app/apps/app_remote/: app_remote.cpp  app_remote.h
app/apps/app_settings/: app_settings.cpp  app_settings.h
app/apps/app_startup_anim/: app_startup_anim.cpp  app_startup_anim.h
app/apps/app_template/: app_template.cpp  app_template.h
app/apps/app_waveform/: app_waveform.cpp  app_waveform.h
app/assets/: assets.cpp  assets.h
app/assets/fonts/: Montserrat-SemiBold-16.vlw  Montserrat-SemiBold-24.vlw  Montserrat-SemiBold-36.vlw  Montserrat-SemiBoldItalic-14.vlw  Montserrat-SemiBoldItalic-24.vlw  Montserrat-SemiBoldItalic-72.vlw  efontCN_16_subset.cpp  efontCN_24_subset.cpp  efontJA_16_subset.cpp  efontJA_24_subset.cpp  fonts.h  types.h
app/assets/images/: images.h  types.h
app/assets/localization/: localization.csv  types.h
app/assets/theme/: types.h
app/assets/web/: syscfg.html  types.h
app/hal/: hal.cpp  hal.h  types.h
(+80 files in other folders)
